add log-in and mantine for react table

--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "11.11.0",
+		"@mantine/core": "6.0.11",
+		"@mantine/hooks": "6.0.11",
+		"@tanstack/react-query": "4.29.7",
+		"@tanstack/react-query-devtools": "4.29.7",
+		"mantine-react-table": "1.0.0-beta.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@faker-js/faker": "8.0.1",
+    "@mantine/dates": "6.0.11",
     "@nabla/vite-plugin-eslint": "1.5.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
@@ -35,5 +42,10 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-tsconfig-paths": "4.2.0"
-  }
+  },
+  "peerDependencies": {
+		"@mantine/dates": "6.0.11",
+		"@tabler/icons-react": "2.20.0",
+		"dayjs": "1.11.7"
+	}
 }
