--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
     "concurrently": "8.0.1",
 		"cors": "2.8.5",
     "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
+		"eslint-plugin-react-hooks": "4.6.0",
+		"eslint-plugin-react-refresh": "0.4.1",
     "eslint-config-prettier": "8.8.0",
 		"eslint-plugin-prettier": "4.2.1",
 		"eslint-plugin-react": "7.32.2",
     "express": "4.18.2",
 		"nodemon": "2.0.22",
 		"prettier": "2.8.8",
-    "typescript": "^5.0.2",
+    "typescript": "^5.0.4",
     "vite": "^4.4.5",
     "vite-tsconfig-paths": "4.2.0"
   },
