--- a/package.json
+++ b/package.json
@@ -1,49 +1,51 @@
 {
-  "name": "datatable-react",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
+	"name": "datatable-react",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
 		"dev": "concurrently \"node api/server.js\" \"vite\"",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@emotion/react": "11.11.0",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@emotion/react": "11.11.0",
 		"@mantine/core": "6.0.11",
 		"@mantine/hooks": "6.0.11",
+		"@tabler/icons-react": "^2.30.0",
 		"@tanstack/react-query": "4.29.7",
 		"@tanstack/react-query-devtools": "4.29.7",
+		"dayjs": "^1.11.9",
 		"mantine-react-table": "1.0.0-beta.8",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
-    "@faker-js/faker": "8.0.1",
-    "@mantine/dates": "6.0.11",
-    "@nabla/vite-plugin-eslint": "1.5.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
-    "concurrently": "8.0.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
+	},
+	"devDependencies": {
+		"@faker-js/faker": "8.0.1",
+		"@mantine/dates": "6.0.11",
+		"@nabla/vite-plugin-eslint": "1.5.0",
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
+		"@typescript-eslint/eslint-plugin": "^6.0.0",
+		"@typescript-eslint/parser": "^6.0.0",
+		"@vitejs/plugin-react": "^4.0.3",
+		"concurrently": "8.0.1",
 		"cors": "2.8.5",
-    "eslint": "^8.45.0",
-		"eslint-plugin-react-hooks": "4.6.0",
-		"eslint-plugin-react-refresh": "0.4.1",
-    "eslint-config-prettier": "8.8.0",
+		"eslint": "^8.45.0",
+		"eslint-config-prettier": "8.8.0",
 		"eslint-plugin-prettier": "4.2.1",
 		"eslint-plugin-react": "7.32.2",
-    "express": "4.18.2",
+		"eslint-plugin-react-hooks": "4.6.0",
+		"eslint-plugin-react-refresh": "0.4.1",
+		"express": "4.18.2",
 		"nodemon": "2.0.22",
 		"prettier": "2.8.8",
-    "typescript": "^5.0.4",
-    "vite": "^4.4.5",
-    "vite-tsconfig-paths": "4.2.0"
-  },
-  "peerDependencies": {
+		"typescript": "^5.0.4",
+		"vite": "^4.4.5",
+		"vite-tsconfig-paths": "4.2.0"
+	},
+	"peerDependencies": {
 		"@mantine/dates": "6.0.11",
 		"@tabler/icons-react": "2.20.0",
 		"dayjs": "1.11.7"
